--- a/package.json
+++ b/package.json
@@ -1,21 +1,14 @@
 {
-  "name": "",
-  "description": "",
-  "version": "0.0.1",
-  "author": "",
+  "author": "CS50",
   "contributors": [
     {
-      "name": "",
-      "email": ""
+      "name": "Anthony Bau",
+      "email": "dab1998@gmail.com"
     }
   ],
-  "repository": {
-    "type": "git",
-    "url": ""
-  },
+  "description": "Adds Droplet support for C files",
+  "name": "c9.ide.cs50.droplet",
   "plugins": {
     "plugin": {}
-  },
-  "categories": ["miscellaneous"],
-  "licenses": []
+  }
 }
